tests/codegen/fail/scalar/derive_input/attr_transparent_unit_struct.stderr
error: GraphQL scalar `transparent` attribute argument requires exactly 1 field
 --> fail/scalar/derive_input/attr_transparent_unit_struct.rs:4:1
  |
4 | struct ScalarSpecifiedByUrl;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
